<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Header"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_Header_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_Header_Description"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_Header" />

    <TextView
        android:id="@+id/text_Menu_Dishes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_Menu_Dishes"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_Header_Description" />

    <View
        android:id="@+id/separator1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_Menu_Dishes" />

    <CheckBox
        android:id="@+id/check_Dish1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_Dish1"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator1" />

    <TextView
        android:id="@+id/text_Dish1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/text_Dish1"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator1" />

    <CheckBox
        android:id="@+id/check_Dish2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_Dish2"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_Dish1" />

    <TextView
        android:id="@+id/text_Dish2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/text_Dish2"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_Dish1" />

    <CheckBox
        android:id="@+id/check_Dish3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_Dish3"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_Dish2" />

    <TextView
        android:id="@+id/text_Dish3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/text_Dish3"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_Dish2" />

    <CheckBox
        android:id="@+id/check_Dish4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_Dish4"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_Dish3" />

    <TextView
        android:id="@+id/text_Dish4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/text_Dish4"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_Dish3" />

    <TextView
        android:id="@+id/text_Menu_Drinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_Menu_Drinks"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_Dish4" />

    <View
        android:id="@+id/separator2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_Menu_Drinks" />

    <CheckBox
        android:id="@+id/check_Drink1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_Drink1"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator2" />

    <TextView
        android:id="@+id/text_Drink1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/text_Drink1"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator2" />

    <CheckBox
        android:id="@+id/check_Drink2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_Drink2"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_Drink1" />

    <TextView
        android:id="@+id/text_Drink2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/text_Drink2"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_Drink1" />

    <TextView
        android:id="@+id/text_Label_Resul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Label_Resul"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_Drink2" />

    <Button
        android:id="@+id/button_Calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/white"
        android:text="@string/button_Calculate"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_Order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/white"
        android:text="@string/button_Order"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>